--- a/OpenGl_Bolun.vcxproj.filters
+++ b/OpenGl_Bolun.vcxproj.filters
@@ -20,7 +20,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Shaders\shader.vs" />
-    <None Include="Shaders\shader.fs" />
+    <None Include="fragment.glsl" />
+    <None Include="vertex.glsl" />
   </ItemGroup>
 </Project>
