--- a/OpenGl_Bolun.vcxproj
+++ b/OpenGl_Bolun.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{7FC86172-E437-4DF2-8E8C-83AFE1CA1295}</ProjectGuid>
     <RootNamespace>OpenGl_Bolun</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -134,6 +134,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="fragment.glsl" />
+    <None Include="reflectionFragment.glsl" />
+    <None Include="reflectionVertex.glsl" />
     <None Include="renderToTextureFragment.glsl" />
     <None Include="renderToTextureVertex.glsl" />
     <None Include="SkyboxFragment.glsl" />
